<resources>
    <string name="app_name">Fire Free</string>
    <string name="smart_alarm_system">Smart Alarm System</string>
    <string name="user_s_email">User\'s Email</string>
    <string name="system_serial_code">System Serial Code</string>
    <string name="user_s_mobile">User\'s Mobile</string>
    <string name="login">Login</string>
    <string name="email_id">Email ID:</string>
    <string name="textview">TextView</string>
    <string name="temperature">Temperature("\u2109"):</string>
    <string name="danger">DANGER!!!</string>
    <string name="smoke">Smoke:</string>

    <string name="safe">SAFE!!</string>
    <string name="first_aid_tips">First Aid Tips</string>
    <string name="call_police">Call Police</string>
    <string name="fire_department">Fire Department</string>
    <string name="call_ambulance">Call Ambulance</string>
    <string name="_0">0</string>
    <string name="email">email</string>
    <string name="edit_details">Edit Details</string>
    <string name="save">SAVE</string>
    <string name="select_fields_to_edit">Select Fields To Edit:</string>
    <string name="alarm_sound_off">Alarm Sound Off</string>
    <string name="not_detected">Not Detected</string>
    <string name="fire_free">Fire Free</string>
    <string name="live_tension_free">Live Tension Free</string>
    <string name="live_fire_free">Live Fire Free</string>
    <string name="new_mobile">new mobile</string>
    <string name="new_email">new email</string>
    <string name="reset">RESET</string>
    <string name="check_room">CHECK!</string>

</resources>